tests/ui/async-await/large_moves.option.stderr
error: moving 10024 bytes
  --> $DIR/large_moves.rs:21:14
   |
LL |     let z = (x, 42);
   |              ^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`
note: the lint level is defined here
  --> $DIR/large_moves.rs:1:9
   |
LL | #![deny(large_assignments)]
   |         ^^^^^^^^^^^^^^^^^

error: moving 10024 bytes
  --> $DIR/large_moves.rs:22:13
   |
LL |     let a = z.0;
   |             ^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: moving 9999 bytes
  --> $DIR/large_moves.rs:27:13
   |
LL |     let _ = NotBox::new([0; 9999]);
   |             ^^^^^^^^^^^^^^^^^^^^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: moving 9999 bytes
  --> $DIR/large_moves.rs:41:13
   |
LL |             data,
   |             ^^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: aborting due to 4 previous errors

